<resources>
    <string name="app_name">Spark Director</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_for_fragments">LIGHT FOR YOUR LIFE</string>
    <string name="switch_add_room_fragment">Add Room</string>

    <string name="preference_file_key">preference_file_key_webhook</string>
    <string name="saved_webhook_api_key">saved_key_for_ifttt</string>
    <string name="default_webhook_api_key">default-webhook-key</string>
    <string name="add_new_room_title_string">Add New Room</string>
    <string name="add_room_name_hint">Room Name</string>
    <string name="add_turn_on_key_hint">Turn On Endpoint</string>
    <string name="add_turn_off_key_hint">Turn Off Endpoint</string>
    <string name="add_webhook_key_hint">Webhook API Key</string>
    <string name="add_room_submit_button_text">Add Room</string>
    <string name="controls_list_header_text">Home</string>
    <string name="turn_on_button_text">On</string>
    <string name="turn_off_button_text">Off</string>
    <string name="switch_edit_room_fragment_title">Edit Room</string>
    <string name="edit_room_title_string">Edit Room</string>
    <string name="save_text">Save</string>
    <string name="validate_string">Validate</string>
    <string name="configure_home_string">Get started by creating IFTTT Applets using Webhooks and Orro!</string>
    <string name="set_dimming_level_hint">Set Dimming Level Endpoint</string>
    <string name="room_setup_description_detail_string">To configure a room in the Spark Director app, minimal setup is required to create an IFTTT applet. An applet is the association of a trigger (using the Webhooks service) and an action (i.e. an Orro light switch, Hue smart bulb, etc.).</string>
    <string name="learn_more_preface_text">More information about Spark Director, compatible services, and more can be found on the Spark Director website.</string>
    <string name="learn_more_button_text">Learn More</string>
    <string name="about_body_text_1">Spark Director creates a centralized home for your smart lighting controls, providing a common interface no matter the brand.</string>
    <string name="about_body_text_2">Spark Director works by sending HTTP requests to specific endpoints. These requests act as triggers to a lighting action, and this is all done through IFTTT.</string>
    <string name="about_body_text_3">The Webhooks IFTTT service is used to create the enpoints and triggers. These api endpoints and key are all stored locally on the phone, not in the cloud. The endpoint/trigger is then associated with the lighting action and then you are ready to use Spark Director.</string>
    <string name="how_it_works_label">How It Works</string>
    <string name="room_setup_title">Room Setup</string>
    <string name="step_x_step_preface_text">Step by step instructions can be found on the Spark Director website.</string>
    <string name="get_instructions_label">Get Instructions</string>
    <string name="setup_instructions_label">Setup Instructions</string>
    <string name="sign_out">Sign Out</string>
</resources>
