<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.caseytmorris.orroifttt.switchaddroom.SwitchAddRoomViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".switchaddroom.SwitchAddRoomFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/add_new_room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_room_title_string"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_roomname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/add_room_name_hint"
            android:text="@={viewModel.roomName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_room_title" />

        <EditText
            android:id="@+id/editText_turnon_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/add_turn_on_key_hint"
            android:text="@={viewModel.turnOnKey}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_roomname" />

        <EditText
            android:id="@+id/editText_turnoff_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/add_turn_off_key_hint"
            android:text="@={viewModel.turnOffKey}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_turnon_key" />

        <EditText
            android:id="@+id/editText_webhook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/add_webhook_key_hint"
            android:text="@={viewModel.webhookApiKeyLiveData}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_turnoff_key" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_room_submit_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_webhook"
            android:onClick="@{(view) -> viewModel.onSubmitClicked(view)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>